2023-08-07 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Release version 5.1.0

2023-05-07 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Release version 5.0.0

2023-05-06 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Drop compatibility with TYPO3 10, modernize and clean up code
	* Ensure compatibility with External Import 7.0.0
	* Ensure compatibility with TYPO3 12

2021-11-19 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Add example about importing translations, resolves #2
	* Add example about filtering data, resolves #1
	* Release version 4.0.0

2021-11-17 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Improve fe_users example by casting external values with a transformation
	* Fix bug with import of news links

2021-10-04 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Ensure compatibility with upcoming External Import 6.0.0
	* Replace example hook by event

2020-12-01 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Release version 3.0.1

2020-11-24 Raphaël Gomes Vidreiro (Idéative)  <typo3@ideative.ch>

	* Update composer manifest

2020-10-21 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Release version 3.0.0

2020-10-18 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Update configuration and documentation for upcoming External Import 5.0
	* Enhance fe_users import scenario to demonstrate importing images

2020-05-12 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Ensure compatibility with TYPO3 10 LTS and updates to external_import and connector services, resolves #5
	* Update documentation settings, resolves #6
	* Release version 2.3.0

2019-01-13 Francois Suter (Cobweb)  <typo3@ideative.ch>

	* Ensure compatibility with TYPO3 9 LTS, drop support for TYPO3 7
	* Adapt code to new Connector Services possibilities
	* Update documentation
	* Change icons to SVG
	* Release version 2.2.0

2018-02-17 Francois Suter (Cobweb)  <typo3@ideative.ch>

	* Released version 2.1.1
