@@ -1,3 +1,8 @@
+2025-03-11 Francois Suter (Idéative)  <typo3@ideative.ch>
+
+	* Ensure compatibility with External Import 8.0.0
+	* Ensure compatibility with TYPO3 13
+
 2023-08-07 Francois Suter (Idéative)  <typo3@ideative.ch>
 
 	* Release version 5.1.0
